Cleand up the code a little bit

--- a/Labs/test.ipynb
+++ b/Labs/test.ipynb
@@ -24,6 +24,66 @@
     "for i in test:\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hej,                 då\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"hej, \".ljust(20)\n",
+    "\n",
+    "test_str += \" då\"\n",
+    "\n",
+    "print(test_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2\n",
+      "2 3\n",
+      "3 3\n",
+      "4 4\n",
+      "5 5\n",
+      "6 6\n",
+      "7 1\n",
+      "8 1\n",
+      "9 1\n",
+      "10 1\n",
+      "11 1\n",
+      "12 1\n",
+      "13 1\n",
+      "14 1\n",
+      "15 1\n",
+      "16 1\n",
+      "17 1\n",
+      "18 1\n",
+      "19 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "testlist = [1, 2, 3, 3, 4, 5, 6, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+    "\n",
+    "for e, i in enumerate(testlist):\n",
+    "    print(e, i)\n"
+   ]
   }
  ],
  "metadata": {
